--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
    </header>
 
 
+    
+   <!--Main-->
+   <main>
+    <!--Home-->
+    <section id="home" class="home-section bg-gray">
+        <div class="container"> 
+            <div class="row gy-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="home-intro text-center text-lg-start">
+                        <h6>Hi, My name is Gelton</h6>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+            
+    </section>
+   </main>
+
     <!--Boostrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
