--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Boxicon-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- CSS only -->
     <link rel="stylesheet" href="./assets/css/style.css">
+
 
     <title>Personal Portfolio </title>
 </head>
@@ -44,6 +47,7 @@
                 </ul>
             </div>
 
+
             <!--Button-->
 
             <div class="ms-auto d-none d-lg-block">
@@ -68,11 +72,26 @@
     <!--Home-->
     <section id="home" class="home-section bg-gray">
         <div class="container"> 
+            <div class="anim-elements">
+                <div class="anim-element"><i class='bx bxl-html5'></i></div>
+                <div class="anim-element"><i class='bx bxl-bootstrap' ></i></div>
+                <div class="anim-element"><i class='bx bxl-css3' ></i></div>
+                <div class="anim-element"><i class='bx bxl-tailwind-css' ></i></div>
+                <div class="anim-element"><i class='bx bxl-wordpress' ></i></div>
+            </div>
             <div class="row gy-5 align-items-center">
                 <div class="col-lg-6">
                     <div class="home-intro text-center text-lg-start">
                         <h6>Hi, My name is Gelton</h6>
+                        <h1>I'm a <span id="type-it"></span></h1>
+                        <p>A web develoeper</p>
+                        <a href="#" class="colored-btn">Download CV</a>
 
+                    </div>
+                </div>
+                <div class="col-lg-6 pt-lg-0">
+                    <div class="home-image text-center">
+                        <img src="./assets/img/Hero.png" alt="">
                     </div>
                 </div>
             </div>
@@ -81,7 +100,17 @@
     </section>
    </main>
 
+
     <!--Boostrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!--JQuery-->
+    <script src="./assets/jquery/jquery3.7.1.js"></script>
+    <!--Custom JS-->
+    <script src="assets/js/script.js"></script>
+
+    <!--Typeit JS-->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+
 </body>
 </html>
