--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Boxicon-->
@@ -12,11 +11,9 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-
-    <title>Personal Portfolio </title>
+    <title>Personal Portfolio</title>
 </head>
 <body>
-
    <!--Header-->
    <header class="main-header">
     <nav class="navbar header-nav navbar-expand-lg">
@@ -33,23 +30,21 @@
                         <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li>
-                        <a href="#about" class="nav-link">About</a>
+                        <a href="#about" class="nav-link">About Me</a>
                     </li>
                     <li>
-                        <a href="#services" class="nav-link">Services</a>
+                        <a href="#services" class="nav-link">Activity</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="nav-link">Portfolio</a>
+                        <a href="#portfolio" class="nav-link">Contact</a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav-link">Contact</a>
+                        <a href="#contact" class="nav-link">Credits</a>
                     </li>
                 </ul>
             </div>
 
-
             <!--Button-->
-
             <div class="ms-auto d-none d-lg-block">
                 <a class="colored-btn" href="#">Contact Now</a>
             </div>
@@ -65,8 +60,6 @@
     </nav>
    </header>
 
-
-    
    <!--Main-->
    <main>
     <!--Home-->
@@ -84,9 +77,8 @@
                     <div class="home-intro text-center text-lg-start">
                         <h6>Hi, My name is Gelton</h6>
                         <h1>I'm a <span id="type-it"></span></h1>
-                        <p>A web develoeper</p>
-                        <a href="#" class="colored-btn">Download CV</a>
-
+                        <p>An enthusiastic student from FEU Tech.</p>
+                        <a href="./assets/docs/Gelton-Blanca-CV.pdf" class="colored-btn">Download CV</a>
                     </div>
                 </div>
                 <div class="col-lg-6 pt-lg-0">
@@ -96,21 +88,88 @@
                 </div>
             </div>
         </div>
-            
     </section>
    </main>
 
+    <!--Heading-->
+    <div class="paragraph-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <h1 class="text-left">My <span id="text-1">Expertise</span></h1>
+                </div>
+                <div class="col">
+                    <div class="text-left">
+                        <p>As a student with a passion for web development and programming, I've acquired a diverse set of skills through coursework and personal projects. Below are some areas where I've developed my expertise.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!--Boostrap JS-->
+   <!--Card section-->
+   <div class="main-content-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <div class="card">
+                    <img src="./assets/img/web.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Web Development Skills</h5>
+                        <p class="card-text">I've learned HTML, CSS, and Bootstrap to create responsive and visually appealing web pages as part of my studies and projects.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img src="./assets/img/programming.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Programming Languages</h5>
+                        <p class="card-text">Through my coursework, I've become proficient in C++ and Python, allowing me to solve problems and build various applications.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img src="./assets/img/frameworks.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Frameworks & Tools</h5>
+                        <p class="card-text">I've gained experience using Bootstrap for front-end development and WordPress for creating dynamic websites through my projects.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Footer-->
+<footer class="main-footer">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 py-2">
+                <div class="nav justify-content-center justify-content-md-start">
+                    <a href="#" class="nav-link"><i class="bx bxl-facebook"></i></a>
+                    <a href="#" class="nav-link"><i class="bx bxl-twitter"></i></a>
+                    <a href="#" class="nav-link"><i class="bx bxl-instagram"></i></a>
+                    <a href="#" class="nav-link"><i class="bx bxl-linkedin"></i></a>
+                    <a href="#" class="nav-link"><i class="bx bxl-github"></i></a>
+                </div>
+            </div>
+            <div class="col-md-6 py-2 text-center text-md-end">
+                <p>&copy; 2022 Gelton Blanca. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+    <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!--JQuery-->
-    <script src="./assets/jquery/jquery3.7.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!--Custom JS-->
     <script src="assets/js/script.js"></script>
-
     <!--Typeit JS-->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-
 
 </body>
 </html>
