feat(about page) add nav, footer, hero section, text progress bar

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
         <div class="container">
             <!--LOGO-->
             <a href="#" class="navbar-brand">
-                <h4 class="mb-0">Personal <span class="text-primary">Portfolio</span></h4>
+                <h4 class="mb-0">Gelton <span class="text-primary">Blanca</span></h4>
             </a>
 
             <!--Menu-->
             <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-toggle">
                 <ul class="navbar-nav mx-auto">
                     <li>
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="./index.html" class="nav-link">Home</a>
                     </li>
                     <li>
-                        <a href="#about" class="nav-link">About Me</a>
+                        <a href="./pages/About/index.html" class="nav-link">About Me</a>
                     </li>
                     <li>
-                        <a href="#services" class="nav-link">Activity</a>
+                        <a href="./pages/Activity/index.html" class="nav-link">Activity</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="nav-link">Contact</a>
+                        <a href="./pages/Contact/index.html" class="nav-link">Contact</a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav-link">Credits</a>
+                        <a href="./pages/Credits/index.html" class="nav-link">Credits</a>
                     </li>
                 </ul>
             </div>
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <div class="col-md-6 py-2 text-center text-md-end">
-                <p>&copy; 2022 Gelton Blanca. All rights reserved.</p>
+                <p>&copy; 2024 Gelton Blanca. All rights reserved.</p>
             </div>
         </div>
     </div>
