fix(activity page and about page) link the nav properly refractor(activity page) remove some unnecessary section

--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -33,13 +33,13 @@
                         <a href="./index.html" class="nav-link">About Me</a>
                     </li>
                     <li>
-                        <a href="#services" class="nav-link">Activity</a>
+                        <a href="../Activity/index.html" class="nav-link">Activity</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="nav-link">Contact</a>
+                        <a href="../Contact/index.html" class="nav-link">Contact</a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav-link">Credits</a>
+                        <a href="../Credits/index.html" class="nav-link">Credits</a>
                     </li>
                 </ul>
             </div>
