--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -20,26 +20,26 @@
         <div class="container">
             <!--LOGO-->
             <a href="#" class="navbar-brand">
-                <h4 class="mb-0">Personal <span class="text-primary">Portfolio</span></h4>
+                <h4 class="mb-0">Gelton <span class="text-primary">Blanca</span></h4>
             </a>
 
             <!--Menu-->
             <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-toggle">
                 <ul class="navbar-nav mx-auto">
                     <li>
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="../../index.html" class="nav-link">Home</a>
                     </li>
                     <li>
-                        <a href="#about" class="nav-link">About Me</a>
+                        <a href="../About/index.html" class="nav-link">About Me</a>
                     </li>
                     <li>
-                        <a href="#services" class="nav-link">Activity</a>
+                        <a href="./index.html" class="nav-link">Activity</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="nav-link">Contact</a>
+                        <a href="../Contact/index.html" class="nav-link">Contact</a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav-link">Credits</a>
+                        <a href="../Credits/index.html" class="nav-link">Credits</a>
                     </li>
                 </ul>
             </div>
@@ -64,83 +64,46 @@
    <main>
     <!--Home-->
     <section id="home" class="home-section bg-gray">
-        <div class="container"> 
-            <div class="anim-elements">
-                <div class="anim-element"><i class='bx bxl-html5'></i></div>
-                <div class="anim-element"><i class='bx bxl-bootstrap' ></i></div>
-                <div class="anim-element"><i class='bx bxl-css3' ></i></div>
-                <div class="anim-element"><i class='bx bxl-tailwind-css' ></i></div>
-                <div class="anim-element"><i class='bx bxl-wordpress' ></i></div>
-            </div>
-            <div class="row gy-5 align-items-center">
-                <div class="col-lg-6">
-                    <div class="home-intro text-center text-lg-start">
-                        <h6>Hi, My name is Gelton</h6>
-                        <h1>I'm a <span id="type-it"></span></h1>
-                        <p>An enthusiastic student from FEU Tech.</p>
-                        <a href="./assets/docs/Gelton-Blanca-CV.pdf" class="colored-btn">Download CV</a>
-                    </div>
+         <!--Card section-->
+<div class="main-content-2">
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="col-lg-6 pt-lg-0">
-                    <div class="home-image text-center">
-                        <img src="./assets/img/Hero.png" alt="">
-                    </div>
-                </div>
+              </div>
             </div>
-        </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+
+            </div>
+          </div>
+    </div>
+</div>
     </section>
    </main>
 
-    <!--Heading-->
-    <div class="paragraph-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <h1 class="text-left">My <span id="text-1">Expertise</span></h1>
-                </div>
-                <div class="col">
-                    <div class="text-left">
-                        <p>As a student with a passion for web development and programming, I've acquired a diverse set of skills through coursework and personal projects. Below are some areas where I've developed my expertise.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-   <!--Card section-->
-   <div class="main-content-2">
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <div class="card">
-                    <img src="./assets/img/web.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Web Development Skills</h5>
-                        <p class="card-text">I've learned HTML, CSS, and Bootstrap to create responsive and visually appealing web pages as part of my studies and projects.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="card">
-                    <img src="./assets/img/programming.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Programming Languages</h5>
-                        <p class="card-text">Through my coursework, I've become proficient in C++ and Python, allowing me to solve problems and build various applications.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="card">
-                    <img src="./assets/img/frameworks.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Frameworks & Tools</h5>
-                        <p class="card-text">I've gained experience using Bootstrap for front-end development and WordPress for creating dynamic websites through my projects.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 <!--Footer-->
 <footer class="main-footer">
@@ -156,7 +119,7 @@
                 </div>
             </div>
             <div class="col-md-6 py-2 text-center text-md-end">
-                <p>&copy; 2022 Gelton Blanca. All rights reserved.</p>
+                <p>&copy; 2024 Gelton Blanca. All rights reserved.</p>
             </div>
         </div>
     </div>
