feat(activity page) add card,content and style

--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -65,33 +65,42 @@
     <!--Home-->
     <section id="home" class="home-section bg-gray">
          <!--Card section-->
-<div class="main-content-2">
+         
+<div class="main-content-1">
+    <div class="text-center">
+        <h2>Seatwork <span class="text-primary">Activity</span></h2>
+        <p>Here are some of the activities that I have done in my web design with client side scripting	.</p>
+    </div>
     <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4">
+
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./assets/img/seatwork-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Seatwork 2</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="https://blanca890.github.io/WD-SEATWORK2-RESUME/" class="btn btn-primary">View</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./assets/img/seatwork-3-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Seatwork 3</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="https://blanca890.github.io/WD-seatwork3/" class="btn btn-primary">View</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./assets/img/seatwork-4-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Seatwork 4</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                    <a href="https://blanca890.github.io/WD-Seatwork4/" class="btn btn-primary">View</a>
                 </div>
               </div>
             </div>
