--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -62,6 +62,10 @@
 
    <!--Main-->
    <main>
+    <section id="home" class="home-section bg-gray">
+        <!--Card section-->
+</div>
+</main>
     <!--About-->
     <section id="About" class="about-section">
         <div class="container">
