--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -93,6 +93,59 @@
         </div>
     </section>
    </main>
+   <div class="container">
+    <h2 class="text-dark fw-semibold text-center">My <span class="text-primary">Experience</span></h2>
+   </div>
+   
+<!--Experience-->
+<div class="container">
+ <div class="row">
+      <div class="col-md-12">
+            <div class="main-timeline">
+                 <div class="timeline">
+                      <a href="#" class="timeline-content">
+                            <div class="timeline-icon"><i class="bx bx-globe"></i></div>
+                            <div class="timeline-year">2021</div>
+                            <h3 class="title">Web Designing</h3>
+                            <p class="description">
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                      </a>
+                 </div>
+                 <div class="timeline">
+                      <a href="#" class="timeline-content">
+                            <div class="timeline-icon"><i class="bx bx-rocket"></i></div>    
+                            <div class="timeline-year">2020</div>
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                      </a>
+                 </div>
+                 <div class="timeline">
+                      <a href="#" class="timeline-content">
+                            <div class="timeline-icon"><i class="bx bx-globe"></i></div>
+                            <div class="timeline-year">2020</div>
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                      </a>
+                 </div>
+                 <div class="timeline">
+                      <a href="#" class="timeline-content">
+                            <div class="timeline-icon"><i class="bx bx-rocket"></i></div>    
+                            <div class="timeline-year">2020</div>
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                      </a>
+                 </div>
+            </div>
+      </div>
+ </div>
+</div>
 
     <!--Skills Section with Progress Bars-->
     <section id="Progress-bar" class="progress-section">
@@ -191,6 +244,8 @@
             </div>
         </div>
     </section>
+
+    
 
 <!--Footer-->
 <footer class="main-footer">
