-refractor(landing page,About, update the links for footer

--- a/pages/Credits/index.html
+++ b/pages/Credits/index.html
@@ -27,19 +27,19 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-toggle">
                 <ul class="navbar-nav mx-auto">
                     <li>
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="../../index.html" class="nav-link">Home</a>
                     </li>
                     <li>
-                        <a href="#about" class="nav-link">About Me</a>
+                        <a href="../About/index.html" class="nav-link">About Me</a>
                     </li>
                     <li>
-                        <a href="#services" class="nav-link">Activity</a>
+                        <a href="../Activity/index.html" class="nav-link">Activity</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="nav-link">Contact</a>
+                        <a href="../Contact/index.html" class="nav-link">Contact</a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav-link">Credits</a>
+                        <a href="./index.html" class="nav-link">Credits</a>
                     </li>
                 </ul>
             </div>
@@ -148,11 +148,11 @@
         <div class="row align-items-center">
             <div class="col-md-6 py-2">
                 <div class="nav justify-content-center justify-content-md-start">
-                    <a href="#" class="nav-link"><i class="bx bxl-facebook"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-instagram"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-github"></i></a>
+                    <a href="https://www.facebook.com/gelton.blanca" class="nav-link"><i class="bx bxl-facebook"></i></a>
+                    <a href="https://x.com/blanca8901" class="nav-link"><i class="bx bxl-twitter"></i></a>
+                    <a href="https://www.instagram.com/gellyton_/" class="nav-link"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/gelton-blanca-500a201a8/" class="nav-link"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://github.com/blanca890" class="nav-link"><i class="bx bxl-github"></i></a>
                 </div>
             </div>
             <div class="col-md-6 py-2 text-center text-md-end">
