--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -11,7 +11,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>Personal Portfolio</title>
+    <title>AWS Landing Page</title>
 </head>
 <body>
    <!--Header-->
@@ -42,7 +42,7 @@
                         <a href="../Credits/index.html" class="nav-link">Credits</a>
                     </li>
                 </ul>
-            </div>
+            </section>
 
             <!--Button-->
             <div class="ms-auto d-none d-lg-block">
@@ -64,8 +64,8 @@
    <main>
     <section id="home" class="home-section bg-gray">
         <!--Card section-->
-</div>
-</main>
+        </section>
+        </main>
     <!--About-->
     <section id="About" class="about-section">
         <div class="container">
@@ -253,11 +253,11 @@
         <div class="row align-items-center">
             <div class="col-md-6 py-2">
                 <div class="nav justify-content-center justify-content-md-start">
-                    <a href="#" class="nav-link"><i class="bx bxl-facebook"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-instagram"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-github"></i></a>
+                    <a href="https://www.facebook.com/gelton.blanca" class="nav-link"><i class="bx bxl-facebook"></i></a>
+                    <a href="https://x.com/blanca8901" class="nav-link"><i class="bx bxl-twitter"></i></a>
+                    <a href="https://www.instagram.com/gellyton_/" class="nav-link"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/gelton-blanca-500a201a8/" class="nav-link"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://github.com/blanca890" class="nav-link"><i class="bx bxl-github"></i></a>
                 </div>
             </div>
             <div class="col-md-6 py-2 text-center text-md-end">
