--- a/pages/Contact/index.html
+++ b/pages/Contact/index.html
@@ -167,11 +167,11 @@
         <div class="row align-items-center">
             <div class="col-md-6 py-2">
                 <div class="nav justify-content-center justify-content-md-start">
-                    <a href="#" class="nav-link"><i class="bx bxl-facebook"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-instagram"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#" class="nav-link"><i class="bx bxl-github"></i></a>
+                    <a href="https://www.facebook.com/gelton.blanca" class="nav-link"><i class="bx bxl-facebook"></i></a>
+                    <a href="https://x.com/blanca8901" class="nav-link"><i class="bx bxl-twitter"></i></a>
+                    <a href="https://www.instagram.com/gellyton_/" class="nav-link"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/gelton-blanca-500a201a8/" class="nav-link"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://github.com/blanca890" class="nav-link"><i class="bx bxl-github"></i></a>
                 </div>
             </div>
             <div class="col-md-6 py-2 text-center text-md-end">
