refractor(about page) update the info in the experience

--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -106,19 +106,22 @@
                       <a href="#" class="timeline-content">
                             <div class="timeline-icon"><i class="bx bx-globe"></i></div>
                             <div class="timeline-year">2021</div>
-                            <h3 class="title">Web Designing</h3>
+                            <h3 class="title">Recruitment Specialist</h3>
+                            <h4 class="font-weight-bold">PSG Global Solution</h4>
                             <p class="description">
-                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                                Sources and screens candidates for job orders using various platforms, conducts phone interviews to verify qualifications and requirements, schedules interviews with hiring managers, recruits passive candidates, and recommends additional candidate pools and recruiting techniques based on market conditions.
                             </p>
                       </a>
                  </div>
                  <div class="timeline">
                       <a href="#" class="timeline-content">
                             <div class="timeline-icon"><i class="bx bx-rocket"></i></div>    
-                            <div class="timeline-year">2020</div>
-                            <h3 class="title">Web Development</h3>
+                            <div class="timeline-year">2021</div>
+                            <h3 class="title">
+                                Customer Service Representative</h3>
+                                <h4 class="font-weight-bold">TTEC</h4>
                             <p class="description">
-                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                                Managed and resolved order-related inquiries, acted as an intermediary between customers and restaurants, provided guidance on the DoorDash app and website, relayed user feedback to product and management teams, and handled billing and payment discrepancies to ensure customer satisfaction.
                             </p>
                       </a>
                  </div>
@@ -126,22 +129,15 @@
                       <a href="#" class="timeline-content">
                             <div class="timeline-icon"><i class="bx bx-globe"></i></div>
                             <div class="timeline-year">2020</div>
-                            <h3 class="title">Web Development</h3>
+                            <h3 class="title">
+                                AffinityX</h3>
+                                <h4 class="font-weight-bold">PSG Global Solution</h4>
                             <p class="description">
-                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                                Developed appropriate color schemes or integrated client-preferred colors, designed interactive buttons and controls, created mock-ups for client feedback, addressed functionality issues, regularly updated and maintained the website, and created and stored backup files to safeguard data and design.
                             </p>
                       </a>
                  </div>
-                 <div class="timeline">
-                      <a href="#" class="timeline-content">
-                            <div class="timeline-icon"><i class="bx bx-rocket"></i></div>    
-                            <div class="timeline-year">2020</div>
-                            <h3 class="title">Web Development</h3>
-                            <p class="description">
-                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
-                            </p>
-                      </a>
-                 </div>
+
             </div>
       </div>
  </div>
