--- a/pages/Credits/index.html
+++ b/pages/Credits/index.html
@@ -64,84 +64,94 @@
    <main>
     <!--Home-->
     <section id="home" class="home-section bg-gray">
-        <div class="container"> 
-            <div class="anim-elements">
-                <div class="anim-element"><i class='bx bxl-html5'></i></div>
-                <div class="anim-element"><i class='bx bxl-bootstrap' ></i></div>
-                <div class="anim-element"><i class='bx bxl-css3' ></i></div>
-                <div class="anim-element"><i class='bx bxl-tailwind-css' ></i></div>
-                <div class="anim-element"><i class='bx bxl-wordpress' ></i></div>
-            </div>
-            <div class="row gy-5 align-items-center">
-                <div class="col-lg-6">
-                    <div class="home-intro text-center text-lg-start">
-                        <h6>Hi, My name is Gelton</h6>
-                        <h1>I'm a <span id="type-it"></span></h1>
-                        <p>An enthusiastic student from FEU Tech.</p>
-                        <a href="./assets/docs/Gelton-Blanca-CV.pdf" class="colored-btn">Download CV</a>
-                    </div>
-                </div>
-                <div class="col-lg-6 pt-lg-0">
-                    <div class="home-image text-center">
-                        <img src="./assets/img/Hero.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
    </main>
 
     <!--Heading-->
     <div class="paragraph-1">
         <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-4 ">
+                    <h1 class="text-left">Special <span id="text-1">thanks to!</span></h1>
+                </div>  
+            </div>
+        </div>
+    </div>
+    <!--Card section-->
+    <div class="main-content-2">
+        <div class="container">
             <div class="row">
-                <div class="col-4">
-                    <h1 class="text-left">My <span id="text-1">Expertise</span></h1>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="https://www.youtube.com/@CodeJungle">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top custom-img" alt="...">
+                        </a>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="text-left">
-                        <p>As a student with a passion for web development and programming, I've acquired a diverse set of skills through coursework and personal projects. Below are some areas where I've developed my expertise.</p>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="https://www.youtube.com/results?search_query=portfolio+website+html+css+bootstrap+javascript">
+                            <img src="./assets/img/Youtube.png" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-4 mb-4">
+                    <div class="image">
+                        <a href="./assets/img/code-jungle.PNG">
+                            <img src="./assets/img/code-jungle.PNG" class="card-img-top  custom-img" alt="...">
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-   <!--Card section-->
-   <div class="main-content-2">
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <div class="card">
-                    <img src="./assets/img/web.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Web Development Skills</h5>
-                        <p class="card-text">I've learned HTML, CSS, and Bootstrap to create responsive and visually appealing web pages as part of my studies and projects.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="card">
-                    <img src="./assets/img/programming.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Programming Languages</h5>
-                        <p class="card-text">Through my coursework, I've become proficient in C++ and Python, allowing me to solve problems and build various applications.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="card">
-                    <img src="./assets/img/frameworks.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Frameworks & Tools</h5>
-                        <p class="card-text">I've gained experience using Bootstrap for front-end development and WordPress for creating dynamic websites through my projects.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+    
 <!--Footer-->
 <footer class="main-footer">
     <div class="container">
