feat(credits page) add pictures for the credit and link properly refractor( home, credit,activity and contact page) update the logo and title of the page docs(readme) add description

--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -11,7 +11,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>AWS Landing Page</title>
+    <title>About</title>
 </head>
 <body>
    <!--Header-->
@@ -129,9 +129,9 @@
                       <a href="#" class="timeline-content">
                             <div class="timeline-icon"><i class="bx bx-globe"></i></div>
                             <div class="timeline-year">2020</div>
-                            <h3 class="title">
-                                AffinityX</h3>
-                                <h4 class="font-weight-bold">PSG Global Solution</h4>
+                            <h3 class="title">Web Design Specialist
+                               </h3>
+                                <h4 class="font-weight-bold"> AffinityX</h4>
                             <p class="description">
                                 Developed appropriate color schemes or integrated client-preferred colors, designed interactive buttons and controls, created mock-ups for client feedback, addressed functionality issues, regularly updated and maintained the website, and created and stored backup files to safeguard data and design.
                             </p>
