--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -11,7 +11,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>Personal Portfolio</title>
+    <title>Activity</title>
 </head>
 <body>
    <!--Header-->
