feat(seatwork 1) add content for seatwork 1 refractor(home,activity,about,contact,credit) link the logo  to home

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar header-nav navbar-expand-lg">
         <div class="container">
             <!--LOGO-->
-            <a href="#" class="navbar-brand">
+            <a href="./index.html" class="navbar-brand">
                 <h4 class="mb-0">Gelton <span class="text-primary">Blanca</span></h4>
             </a>
 
