--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar header-nav navbar-expand-lg">
         <div class="container">
             <!--LOGO-->
-            <a href="#" class="navbar-brand">
+            <a href="../../index.html" class="navbar-brand">
                 <h4 class="mb-0">Gelton <span class="text-primary">Blanca</span></h4>
             </a>
 
@@ -76,13 +76,25 @@
     </div>
     <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card">
+                  <img src="./assets/img/seatwork1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h3 class="card-title">Seatwork 1</h3>
+                    <h5 class="card-title">Understanding Website</h5>
+                    <p class="card-text">This activity aims to familiarize students with website components by dissecting a chosen design. Students will create a wireframe based on their selected website design to visualize its structure and layout effectively.   </p>
+                    <a href="../Seatwork1/index.html" class="btn btn-primary">View</a>
+                  </div>
+                </div>
+              </div>
 
             <div class="col">
               <div class="card">
                 <img src="./assets/img/seatwork-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Seatwork 2</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h3 class="card-title">Seatwork 2</h3>
+                    <h5 class="card-title">Understanding Website</h5>
+                  <p class="card-text">Requires students to select a complete one-page website or landing page design from platforms like Pinterest or Behance. The chosen design must include a header, footer, and various sections. </p>
                   <a href="https://blanca890.github.io/WD-SEATWORK2-RESUME/" class="btn btn-primary">View</a>
                 </div>
               </div>
@@ -91,8 +103,9 @@
               <div class="card">
                 <img src="./assets/img/seatwork-3-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Seatwork 3</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h3 class="card-title">Seatwork 3</h3>
+                    <h5 class="card-title">Headers and Footers Display Website</h5>
+                  <p class="card-text">Create a Header and Footer Display Website with distinct designs using pure HTML and CSS. Include both static and animated versions of the headers and footers.  </p>
                   <a href="https://blanca890.github.io/WD-seatwork3/" class="btn btn-primary">View</a>
                 </div>
               </div>
@@ -101,9 +114,9 @@
               <div class="card">
                 <img src="./assets/img/seatwork-4-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Seatwork 4</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                    <a href="https://blanca890.github.io/WD-Seatwork4/" class="btn btn-primary">View</a>
+                    <h3 class="card-title">Seatwork 4</h3>
+                    <h5 class="card-title"> Hero Display Website</h5>
+                  <p class="card-text">This project involves creating a hero display website using pure HTML and CSS. The website will showcase distinct design layouts for various features, emphasizing different layout techniques. Multiple pages will be included to demonstrate various design styles and principles.
                 </div>
               </div>
             </div>
