--- a/pages/Contact/index.html
+++ b/pages/Contact/index.html
@@ -20,8 +20,8 @@
     <nav class="navbar header-nav navbar-expand-lg">
         <div class="container">
             <!--LOGO-->
-            <a href="#" class="navbar-brand">
-                <h4 class="mb-0">Personal <span class="text-primary">Portfolio</span></h4>
+            <a href="../../index.html" class="navbar-brand">
+                <h4 class="mb-0">Gelton <span class="text-primary">Blanca</span></h4>
             </a>
 
             <!--Menu-->
