fix(activity page) fix seatwork 4 button

--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -116,7 +116,8 @@
                 <div class="card-body">
                     <h3 class="card-title">Seatwork 4</h3>
                     <h5 class="card-title"> Hero Display Website</h5>
-                  <p class="card-text">This project involves creating a hero display website using pure HTML and CSS. The website will showcase distinct design layouts for various features, emphasizing different layout techniques. Multiple pages will be included to demonstrate various design styles and principles.
+                  <p class="card-text">This project involves creating a hero display website using pure HTML and CSS. The website will showcase distinct design layouts for various features, emphasizing different layout techniques. Multiple pages will be included to demonstrate various design styles and principles.</p>
+                  <a href="https://blanca890.github.io/WD-Seatwork4/" class="btn btn-primary">View</a>
                 </div>
               </div>
             </div>
