--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="./assets/img/seatwork-3-2.png" class="card-img-top" alt="...">
+                <img src="./assets/img/seatwork-3.PNG" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Seatwork 3</h3>
                     <h5 class="card-title">Headers and Footers Display Website</h5>
@@ -112,7 +112,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="./assets/img/seatwork-4-2.png" class="card-img-top" alt="...">
+                <img src="./assets/img/seatwork-4.PNG" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Seatwork 4</h3>
                     <h5 class="card-title"> Hero Display Website</h5>
