fix(landing page) card hero is not working change name

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img src="./assets/img/programming.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/programming.jpg" class="card-img-top" alt="...." >
                     <div class="card-body">
                         <h5 class="card-title">Programming Languages</h5>
                         <p class="card-text">Through my coursework, I've become proficient in C++ and Python, allowing me to solve problems and build various applications.</p>
