--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img src="./assets/img/web.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/img/web-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Web Development Skills</h5>
                         <p class="card-text">I've learned HTML, CSS, and Bootstrap to create responsive and visually appealing web pages as part of my studies and projects.</p>
@@ -124,7 +124,7 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img src="./assets/img/programming.jpg" class="card-img-top" alt="...." >
+                    <img src="./assets/img/programming-1.jpg" class="card-img-top" alt="...." >
                     <div class="card-body">
                         <h5 class="card-title">Programming Languages</h5>
                         <p class="card-text">Through my coursework, I've become proficient in C++ and Python, allowing me to solve problems and build various applications.</p>
