refractor(activity page) update title for seatwork 2

--- a/pages/Activity/index.html
+++ b/pages/Activity/index.html
@@ -93,7 +93,7 @@
                 <img src="./assets/img/seatwork-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h3 class="card-title">Seatwork 2</h3>
-                    <h5 class="card-title">Understanding Website</h5>
+                    <h5 class="card-title">Resume website</h5>
                   <p class="card-text">Requires students to select a complete one-page website or landing page design from platforms like Pinterest or Behance. The chosen design must include a header, footer, and various sections. </p>
                   <a href="https://blanca890.github.io/WD-SEATWORK2-RESUME/" class="btn btn-primary">View</a>
                 </div>
